public_html/profiles/os2intra/themes/fki/src/less/template/page-layout/sidebar.less
// |--------------------------------------------------------------------------
// | Sidebar
// |--------------------------------------------------------------------------
// |
// | This file contains styles for the following:
// | - .sidebar
// |

// --------------------------------------------------
// Variables
// --------------------------------------------------

@sidebar-logo-broen-narrow-width: 76px;
@sidebar-logo-broen-narrow-height: 76px;
@sidebar-logo-broen-wide-width: 280px;
@sidebar-logo-broen-wide-height: 107px;

// --------------------------------------------------
// Styling
// --------------------------------------------------

// Sidebar
.sidebar {

  .sidebar-inner-wrapper {
    min-height: 100%;
    background-repeat: no-repeat;
    background-position: bottom 20px center;
  }


  .sidebar-navigation {

    > li {

      > a {

        &:before {
          font-family: FontAwesome;
        }
      }

      // Organisation
      &.node-246 {

        > a {

          &:before {
            content: @fa-var-umbrella;
          }
        }
      }

      // Opret IT-vejledning and opret intranetside
      &.node-add-it-vejledning,
      &.node-add-os2intra-base-page {

        > a {

          &:before {
            content: @fa-var-plus;
          }
        }
      }

      // Booking & bestilling
      &.taxonomy-term-8 {

        > a {

          &:before {
            content: @fa-var-tag;
          }
        }
      }

      // Hjælp og værktøjer
      &.taxonomy-term-3 {

        > a {

          &:before {
            content: @fa-var-stethoscope;
          }
        }
      }

      // Mig som ansat
      &.taxonomy-term-4 {

        > a {

          &:before {
            content: @fa-var-users;
          }
        }
      }

      // Opdateret
      &.opdateret {

        > a {

          &:before {
            content: @fa-var-bookmark-o;
          }
        }
      }

      // Grupper
      &.grupper {

        > a {

          &:before {
            content: @fa-var-cloud;
          }
        }
      }
    }
  }
}

// --------------------------------------------------
// Responsive
// --------------------------------------------------

// Mobile
@media @media-query-mobile {

  // Sidebar
  .sidebar {}
}

// Mobile - only
@media @media-query-mobile-only {
  .sidebar-mixin-navigation-hidden(xs);
  .sidebar-mixin-navigation-collapsed(xs);
  .sidebar-mixin-navigation-expanded(xs);

  // Sidebar
  .sidebar {}
}

// Tablet
@media @media-query-tablet {

  // Sidebar
  .sidebar {}
}

// Tablet - only
@media @media-query-tablet-only {
  .sidebar-mixin-navigation-hidden(sm);
  .sidebar-mixin-navigation-collapsed(sm);
  .sidebar-mixin-navigation-expanded(sm);

  // Sidebar
  .sidebar {}
}

// Desktop
@media @media-query-desktop {

  // Sidebar
  .sidebar {}
}

// Desktop - only
@media @media-query-desktop-only {
  .sidebar-mixin-navigation-hidden(md);
  .sidebar-mixin-navigation-collapsed(md);
  .sidebar-mixin-navigation-expanded(md);

  // Sidebar
  .sidebar {}
}

// Large desktop
@media @media-query-large-desktop {

  // Sidebar
  .sidebar {}
}

// Large desktop - only
@media @media-query-large-desktop-only {
  .sidebar-mixin-navigation-hidden(lg);
  .sidebar-mixin-navigation-collapsed(lg);
  .sidebar-mixin-navigation-expanded(lg);

  // Sidebar
  .sidebar {}
}

// Print
@media print {

  // Sidebar
  .sidebar {}
}

// Touch
.touch {

  // Sidebar
  .sidebar {}
}

// No touch
.no-touch {

  // Sidebar
  .sidebar {}
}

// --------------------------------------------------
// Mixins
// --------------------------------------------------

// Sidebar mixin
.mixin-sidebar() {}

// Hidden
.sidebar-mixin-navigation-hidden(@view-mode) {

  .sidebar-left-enabled-@{view-mode} {

    &.sidebar-left-hidden-@{view-mode} {

      // Sidebar
      .sidebar {

        .sidebar-inner-wrapper {
          padding-bottom: floor( ( floor( (2 * @bs3-sidebar-logo-top-bottom-spacing) ) + floor( (@sidebar-logo-broen-wide-height / 2) ) ) );
          background-image: url("../img/logo-broen-sidebar-wide.png");
          background-size: floor( (@sidebar-logo-broen-wide-width / 2) ) floor( (@sidebar-logo-broen-wide-height / 2) );
        }
      }
    }
  }
}

// Collapsed
.sidebar-mixin-navigation-collapsed(@view-mode) {

  .sidebar-left-enabled-@{view-mode} {

    &.sidebar-left-collapsed-@{view-mode} {

      // Sidebar
      .sidebar {

        .sidebar-inner-wrapper {
          padding-bottom: floor( ( floor( (2 * @bs3-sidebar-logo-top-bottom-spacing) ) + floor( (@sidebar-logo-broen-narrow-height / 2) ) ) );
          background-image: url("../img/logo-broen-sidebar-narrow.png");
          background-size: floor( (@sidebar-logo-broen-narrow-width / 2 ) ) floor( (@sidebar-logo-broen-narrow-height / 2) );
        }
      }
    }
  }
}

// Expanded
.sidebar-mixin-navigation-expanded(@view-mode) {

  .sidebar-left-enabled-@{view-mode} {

    &.sidebar-left-expanded-@{view-mode} {

      // Sidebar
      .sidebar {

        .sidebar-inner-wrapper {
          padding-bottom: floor( ( floor( (2 * @bs3-sidebar-logo-top-bottom-spacing) ) + floor( (@sidebar-logo-broen-wide-height / 2) ) ) );
          background-image: url("../img/logo-broen-sidebar-wide.png");
          background-size: floor( (@sidebar-logo-broen-wide-width / 2) ) floor( (@sidebar-logo-broen-wide-height / 2) );
        }
      }
    }
  }
}

